Add /api/golfers/{golfer}
Bump OpenAPI version to express "string" | "null" for country.

We're only reading stuff from the users table for now, longer term we
probably ought to join to other tables like cheevos, points, etc.
